labs/lab2/color-app-blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: color-app-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: color-app-blue
  template:
    metadata:
      labels:
        app: color-app-blue
    spec:
      containers:
        - name: color-app
          image: tpaz1/devopscourse:latest
          ports:
            - containerPort: 8080
