labs/lab2/color-app-green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: color-app-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: color-app-green
  template:
    metadata:
      labels:
        app: color-app-green
    spec:
      containers:
        - name: color-app
          image: tpaz1/devopscourse:latest
          ports:
            - containerPort: 8080
