labs/lab2/color-app-blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: color-app-blue
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: color-app-blue
