labs/lab2/color-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: color-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /blue
            pathType: Prefix
            backend:
              service:
                name: color-app-blue
                port:
                  number: 80
          - path: /green
            pathType: Prefix
            backend:
              service:
                name: color-app-green
                port:
                  number: 80
